[package]
name = "rpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
tower = { version = "0.4", features = ["full"] }
tokio-tower = "0.5"
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
thiserror = "1.0"
async-bincode = "0.6"
slab = "0.4"
anyhow = "1.0"
futures-util = "0.3.16"